--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 								<li><a href="https://www.linkedin.com/in/dumindudesilva/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 								<li><a href="http://github.com/dumidum" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="mailto:dumidumadura@gmail.com?Subject=Hello%20there" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<!-- <li><a href="mailto:dumidumadura@gmail.com?Subject=Hello%20there" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="https://dumidumadura.wixsite.com/dumindu" target="_blank" class="icon fa-globe"><span class="label">Wix Site</span></a></li>
 								<li><a href="https://www.youtube.com/channel/UC7THZ_PmT0UPGBw4htHBvjQ?view_as=subscriber" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
-								<li><a href="https://www.instagram.com/la__traina" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/la__traina" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 								
 							</ul>
 						</nav>
