--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
-
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Dumindu</title>
@@ -22,16 +26,11 @@
 						<p>Tech Enthusiast &nbsp;&bull;&nbsp; UI/UX Designer &nbsp;&bull;&nbsp; Developer</p>
 						<nav>
 							<ul>
-								<li><a href="http://twitter.com/Dumidu_Madura" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="http://Facebook.com/dumidumadura" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.linkedin.com/in/dumindudesilva/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="http://twitter.com/Dumidu_Madura" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="http://Facebook.com/dumidumadura" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-								<li><a href="http://github.com/dumidum" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-								<!-- <li><a href="mailto:dumidumadura@gmail.com?Subject=Hello%20there" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-								<li><a href="https://dumidumadura.wixsite.com/dumindu" target="_blank" class="icon fa-globe"><span class="label">Wix Site</span></a></li>
-								<li><a href="https://www.youtube.com/channel/UC7THZ_PmT0UPGBw4htHBvjQ?view_as=subscriber" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
-								<li><a href="https://www.instagram.com/la__traina" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
-								
+								<li><a href="http://github.com/dumidum" class="icon fa-github"><span class="label">Github</span></a></li>
+								<!-- <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
 							</ul>
 						</nav>
 					</header>
